<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="nsfw_toggle"
        android:summary="@string/pref_description_hide_nsfw"
        android:title="@string/pref_title_hide_nsfw" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_display"
        android:entryValues="@array/pref_list_display_values"
        android:key="display_method"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_description_display"
        android:title="@string/pref_title_display" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_spoilers"
        android:entryValues="@array/pref_list_spoilers_values"
        android:key="spoiler_level"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_description_spoilers"
        android:title="@string/pref_title_spoilers" />

</PreferenceScreen>
